# sample_camera_description

./: CMakeLists.txt  package.xml
config/: camera.left.param.yaml  camera.right.param.yaml  camera_info.left.yaml  camera_info.right.yaml
launch/: camera.launch.xml
urdf/: monocular_camera.xacro
